cashier form validation fields

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -99,5 +99,6 @@
   "reset":"Reset",
   "serviceError": "Service error",
   "cashierCreated": "Cashier created succesfully",
-  "cashierNotCreated": "Could not insert cashier"
+  "cashierNotCreated": "Could not insert cashier",
+  "emptyFields": "Fields empty"
 }
