--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -101,5 +101,7 @@
   "cashierNotCreated": "Could not insert cashier",
   "emptyFields": "Fields empty",
   "locationError": "Location error",
-  "locationErrorInfo": "Can't find your location. Look at your internet conection and try to login again"
+  "locationErrorInfo": "Can't find your location. Look at your internet conection and try to login again",
+  "successfulTransaction": "Transaction startes",
+  "notTransaction": "transaction not started"
 }
