--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -101,5 +101,7 @@
   "cashierNotCreated": "No se pudo insertar el cajero",
   "emptyFields": "Campos vacíos",
   "locationError": "Error de localización",
-  "locationErrorInfo": "No es posible encontrar su localización. Revise su conexión a internet y vuelva a iniciar sesión"
+  "locationErrorInfo": "No es posible encontrar su localización. Revise su conexión a internet y vuelva a iniciar sesión",
+  "successfulTransaction": "Transacción iniciada",
+  "notTransaction": "No se pudo iniciar la transacción"
 }
