transaction style updated

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
   "find": "Searching for location",
   "deposit": "Deposit",
   "draw": "Draw",
-  "operation": "Operation",
+  "operation": "Transaction",
   "cashierImage": "Cashier Image",
   "cashierAvailable": "Available",
   "cashierNotAvailable": "Not available",
