--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,7 @@
   "find": "Buscando Localización",
   "deposit": "Depositar",
   "draw": "Extraer",
-  "operation": "Operación",
+  "operation": "Transacción",
   "cashierImage": "Imagen de cajero",
   "cashierAvailable": "Disponible",
   "cashierNotAvailable": "No disponible",
