admin panel main resolution style changed

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -87,7 +87,7 @@
   "yes": "Yes",
   "no": "No",
   "address": "Address",
-  "cp": "Postal Code",
+  "cp": "P.C.",
   "locality": "Locality",
   "latitude": "Latitude",
   "longitude": "Longitude",
@@ -103,5 +103,6 @@
   "locationError": "Location error",
   "locationErrorInfo": "Can't find your location. Look at your internet conection and try to login again",
   "successfulTransaction": "Transaction startes",
-  "notTransaction": "Transaction not started"
+  "notTransaction": "Transaction not started",
+  "cashiersData": "ATM Data"
 }
